[gd_scene load_steps=6 format=2]

[ext_resource path="res://pics/ui/gold-x-hover.png" type="Texture" id=1]
[ext_resource path="res://UI/Widgets/BScroll.tres" type="Theme" id=2]
[ext_resource path="res://pics/ui/gold-x-2.png" type="Texture" id=3]
[ext_resource path="res://Menus/PuzzleMenu/PuzzleMenu.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="PuzzleMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="VScrollBar" type="ScrollContainer" parent="."]
margin_left = 148.0
margin_top = 108.0
margin_right = 1780.0
margin_bottom = 1032.0
theme = ExtResource( 2 )
custom_styles/bg = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="VScrollBar"]
columns = 5

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1690.0
margin_top = 42.0
margin_right = 1779.0
margin_bottom = 108.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="Close" type="TextureButton" parent="ColorRect"]
margin_left = 13.0
margin_top = 1.0
margin_right = 77.0
margin_bottom = 65.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 1 )

[connection signal="button_up" from="ColorRect/Close" to="." method="_on_Close_button_up"]
[connection signal="mouse_entered" from="ColorRect/Close" to="." method="_on_Close_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/Close" to="." method="_on_Close_mouse_exited"]
